--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,7 @@
+:host {
+    flex: 0 1 auto;
+}
+
 nav {
     display: flex; /* makes the elements inline */
     width: 100%;
@@ -35,7 +39,6 @@ nav > .nav-element {
 #nav-link {
     gap: 6rem;
 }
-
 
 #nav-social {
     gap: 3.5rem;
