--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
     <div id="nav-logo" class="nav-element">
-        <a routerLink="/AppComponent" routerLinkActive="active" ariaCurrentWhenActive="page">
+        <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">
             <fa-icon [icon]="faPlaneDeparture" [styles]="{'color': 'white'}"></fa-icon>
         </a>
     </div>
