--- a/src/styles.css
+++ b/src/styles.css
@@ -10,9 +10,5 @@
 
 body {
     background-color: var(--backgroud-color);
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    margin: 0px;
-    overflow: hidden;
+    margin: 0;
 }
