added about component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     </div>
     <div id="nav-link" class="nav-element">
         <a href="#">RULES</a>
-        <a href="#">ABOUT</a>
+        <a routerLink="/about">ABOUT</a>
     </div>
     <div id="nav-social" class="nav-element">
         <a href="https://www.linkedin.com/" target=”_blank”>
