--- a/src/app/start-playing/start-playing.component.html
+++ b/src/app/start-playing/start-playing.component.html
@@ -1,1 +1,7 @@
-<p>start-playing works!</p>
+<a routerLink="/play">
+    <div id="play-circle">
+        <div id="play-inner-circle">
+            <fa-icon [icon]="faPlay" [styles]="{'color': 'white'}"></fa-icon>
+        </div>
+    </div>
+</a>
