--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,3 +5,6 @@
         <button class="button" type="submit">login</button>
     </form>
 </div>
+<div id="login-footer">
+    <a href="">Don't have an account? Click here</a>
+</div>
