--- a/src/app/start-playing/start-playing.component.html
+++ b/src/app/start-playing/start-playing.component.html
@@ -1,3 +1,5 @@
+<h1>Do you want to play a game?</h1>
+<p>(of rock paper scissors)</p>
 <a routerLink="/play">
     <div id="play-circle">
         <div id="play-inner-circle">
