--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         </a>
     </div>
     <div id="nav-link" class="nav-element">
-        <a href="#">RULES</a>
+        <a routerLink="/rules">RULES</a>
         <a routerLink="/about">ABOUT</a>
     </div>
     <div id="nav-social" class="nav-element">
