--- a/src/app/play/play.component.css
+++ b/src/app/play/play.component.css
@@ -12,6 +12,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#result {
+    flex-flow: column;
+}
+
+#selection {
     gap: 5rem;
 }
 
@@ -62,7 +69,7 @@
     background-color: black;
 }
 
-#result {
+#message {
     font-size: 2rem;
 }
 
