--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
             <fa-icon [icon]="faGithub" [styles]="{'color': 'white'}"></fa-icon>
         </a>
     </div>
-    <div id="nav-user" class="nav-element">
+    <div id="nav-user" class="nav-element" *ngIf="jwt">
         <a href="#">
             <fa-icon [icon]="faUser" [styles]="{'color': 'white'}"></fa-icon>
         </a>
