user can create an account & made the login better

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,1 +1,6 @@
-<p>signup works!</p>
+<form [formGroup]="createUserForm" (ngSubmit)="onSubmit()">
+    <input id="username" type="text" placeholder="Username" required [formControl]="username" autocomplete="username">
+    <input id="email" type="email" placeholder="E-Mail" required [formControl]="email" autocomplete="email">
+    <input id="password" type="password" placeholder="Password" required [formControl]="password" autocomplete="new-password">
+    <button type="submit" [disabled]="username.invalid || email.invalid || password.invalid">sign up</button>
+</form>
