--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,22 +1,28 @@
-#login-form-wrapper {
+#login-form-wrapper,
+form {
     height: calc(100% - 2rem);
     display: flex;
+    flex-flow: column;
     justify-content: center;
     align-items: center;
+    gap: 1rem;
 }
 
-form {
-    width: 50%;
+input {
+    padding: 0.75rem;
+    font-size: 0.9rem;
+    background-color: var(--background-color);
+    border: 2px solid white;
+    border-radius: 1.5rem;
+    color: white;
 }
 
-form > * {
-    width: 100%;
-    display: block;
-}
+input:not(:placeholder-shown):invalid {
+    border-color: red;
+} 
 
 #username {
     margin-top: 1rem;
-    margin-bottom: 1rem;
 }
 
 #login-footer {
