--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,10 @@
 <div id="login-form-wrapper">
     <form id="login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <input id="username" type="text" formControlName="username">
-        <input id="password" type="password" formControlName="password">
+        <input id="username" type="text" formControlName="username" placeholder="Username" required>
+        <input id="password" type="password" formControlName="password" placeholder="Password" required>
         <button class="button" type="submit">login</button>
     </form>
 </div>
 <div id="login-footer">
-    <a href="">Don't have an account? Click here</a>
+    <a routerLink="/sign-up">Don't have an account? Click here</a>
 </div>
