user profile component added

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,7 +17,7 @@
         </a>
     </div>
     <div id="nav-user" class="nav-element" *ngIf="jwt">
-        <a href="#">
+        <a routerLink="/profile">
             <fa-icon [icon]="faUser" [styles]="{'color': 'white'}"></fa-icon>
         </a>
     </div>
