--- a/src/app/start-playing/start-playing.component.css
+++ b/src/app/start-playing/start-playing.component.css
@@ -35,7 +35,7 @@ p {
 #play-inner-circle {
     height: 3rem;
     width: 3rem;
-    background-color: var(--backgroud-color);
+    background-color: var(--background-color);
 }
 
 #play-inner-circle > fa-icon {
