--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 :root{
-    --backgroud-color: rgb(5, 5, 42);
+    --background-color: rgb(5, 5, 42);
     --border-color: rgb(255, 255, 255, 0.15);
 }
 
@@ -9,6 +9,6 @@
 }
 
 body {
-    background-color: var(--backgroud-color);
+    background-color: var(--background-color);
     margin: 0;
 }
