--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -29,17 +29,13 @@ input {
     background-color: white;
     border-radius: 1.5rem;
     color: var(--background-color);
+    transition: background-color 200ms;
 }
 
 .submit-button:disabled {
     background-color: rgb(50, 50, 50);
 }
 
-@keyframes fadeoutBg {
-    from { background-color: white; } /** from color **/
-    to { background-color: grey; } /** to color **/
-}
-
 .submit-button:not(:disabled):hover {
-    animation: fadeoutBg 100ms forwards;
+    background-color: gray;
 }
