--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <form id="login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <input id="username" type="text" formControlName="username" placeholder="Username" required>
         <input id="password" type="password" formControlName="password" placeholder="Password" required>
-        <button class="button submit-button" type="submit">login</button>
+        <button class="button submit-button" type="submit" [disabled]="username.invalid || password.invalid">login</button>
     </form>
 </div>
 <div id="login-footer">
