--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -55,3 +55,16 @@ input {
 .submit-button:not(:disabled):hover {
     background-color: grey;
 }
+
+@keyframes wiggle {
+    0%   {transform: rotate(0deg);}
+    25%  {transform: rotate(5deg);}
+    50%  {transform: rotate(0deg);}
+    75%  {transform: rotate(5deg);}
+    100% {transform: rotate(0deg);}
+}
+
+.invalid-pw {
+    animation: wiggle 333ms 3;
+    border-color: red;
+}
