added info in the about site

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,2 +1,3 @@
 <h1>What is this about?!</h1>
-<h5>or why whas this site created</h5>
+<h3>(or why whas this site created)</h3>
+<div>Simple Angular + Spring Boot implementation of the game Rock Paper Scissors for learning purposes.</div>
