--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -7,7 +7,15 @@
     align-items: center;
 }
 
-h1, h2, h5 {
+h1, h3, div{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    margin: 0;
+}
+
+h3 {
+    margin-bottom: 3rem;
 }
