updated the rules

--- a/src/app/rules/rules.component.html
+++ b/src/app/rules/rules.component.html
@@ -3,6 +3,7 @@
     <h4>Here are the rules:</h4>
 </div>
 <ol>
-    <li>abc</li>
-    <li>def</li>
+    <li>Rock wins against Scissors.</li>
+    <li>Paper wins against Rock.</li>
+    <li>Scissors wins against Paper.</li>
 </ol>
